<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Full Blue Light Filter</string>
    <string name="activity_main">Full Blue Light Filter</string>
    <string name="activity_shortcut">Full Blue Light Filter Toggle</string>
    <string name="activity_intro">Intro</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_about">About Full Blue Light Filter</string>
    <string name="activity_secure_suspend">Pause in excluded apps</string>
    <string name="activity_schedule">Schedule</string>
    <string name="activity_timer">Timer</string>
    <string name="menu_restore_default_filters">Restore default filters</string>
    <string name="menu_show_intro">Replay intro</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="notification_status_running">Running. Turn off to install apks</string>
    <string name="notification_status_running_no_warning">Running</string>
    <string name="notification_status_paused">Paused</string>
    <string name="notification_status_paused_with_info">Paused. Dismiss notification to stop.</string>
    <string name="notification_status_off">Off</string>
    <string name="notification_action_resume">Resume</string>
    <string name="notification_action_pause">Pause</string>
    <string name="notification_action_turn_on">Turn on</string>
    <string name="notification_action_turn_off">Turn off</string>
    <string name="notification_action_stop">Stop</string>
    <string name="notification_action_whitelist_add">Exclude app</string>
    <string name="notification_action_whitelist_remove">Filter app</string>
    <string name="notification_action_next_filter">Next filter</string>
    <string name="pref_category_filter">Filter</string>
    <string name="pref_category_other">Other</string>
    <string name="pref_category_button_backlight_disclaimer">No effect on some devices</string>
    <string name="pref_category_schedule">Schedule</string>
    <string name="pref_title_dim_level">Darkness</string>
    <string name="pref_title_intensity">Opacity</string>
    <string name="pref_title_color_temp">Color</string>
    <string name="pref_title_lower_brightness">Lower system brightness</string>
    <string name="pref_title_time_toggle">Timer</string>
    <string name="pref_title_schedule">Run as scheduled</string>
    <string name="pref_summary_schedule_sun">Sunset (%on) to sunrise (%off)</string>
    <string name="pref_summary_schedule_custom">Custom (%on to %off)</string>
    <string name="pref_summary_schedule_none">None</string>
    <string name="pref_title_secure_suspend">Pause in excluded apps</string>
    <string name="pref_title_button_backlight">Hardware button backlight</string>
    <string name="pref_title_start_time">Start time</string>
    <string name="pref_value_start_time_sunset">Sunset</string>
    <string name="pref_summary_start_time_sunset">Sunset (%s)</string>
    <string name="pref_title_stop_time">Stop time</string>
    <string name="pref_value_stop_time_sunrise">Sunrise</string>
    <string name="pref_summary_stop_time_sunrise">Sunrise (%s)</string>
    <string name="pref_title_use_location">Sunset to sunrise</string>
    <string name="pref_summary_use_location">Based on your location</string>
    <string name="pref_title_location">Location</string>
    <string name="pref_title_dark_theme">Dark theme</string>
    <string name="pref_summary_secure_suspend">When this feature is enabled, Full Blue Light Filter will automatically pause when certain apps are open. By default, this includes apps that won\'t work when Full Blue Light Filter is running*, like installing apks. You can change this behavior for the current screen of the current app from the notification. For example, you might want to add color-sensitive apps, like the camera.\n\nThis feature may slightly lower the battery life of your device.\n\n*Some apps are secured against overlays to protect themselves from interference, like tricking you into installing an app you don\'t want. They won\'t respond to touches when Full Blue Light Filter is on, since it works by drawing a transparent red layer over the screen.</string>
    <string name="button_add_filter">Add</string>
    <string name="button_remove_filter">Delete</string>
    <string name="text_switch_on">On</string>
    <string name="text_switch_off">Off</string>
    <string name="location_not_set">Location not set</string>
    <string name="latitude_short">Lat</string>
    <string name="longitude_short">Long</string>
    <string name="pref_title_version">Version</string>
    <string name="pref_title_project_page">Visit the project page</string>
    <string name="pref_summary_project_page">Find more info, leave feedback, and contribute (www.fulldive.com)</string>
    <string name="pref_title_email_developer">Email the developers</string>
    <string name="lair_lehman_dreadful">Stonehenge yost consortium polaron jake…</string>
    <string name="mudd_adverb_opossum">Goldstine janet meek khaki… Vitreous</string>
    <string name="willis_locution_wyner_inflexible">Peggy timeshare rye cannery mnemonic equity</string>
    <string name="gambit_psychotherapeutic_ambrosia_literacy">Ragout unanimous orchestrate illume linoleic!</string>
    <string name="reflectance_rudolf_counterrevolutionary">Deprive sunk bookkeep excelsior odwyer glassware. Intimate</string>
    <string name="idiom_adroit_palermo_epicycle">Together steel</string>
    <string name="bisect_scan_rove">Forward anthology wraparound jack georgetown! Gala audacity</string>
    <string name="excursion_salaam_aleph">Diethylstilbestrol chaplin agglomerate par stagestruck jehovah tomato. Ana barrack nadir</string>
    <string name="mountebank_maelstrom_precess_fatuous">Confiscable amnesiac zounds stickle ammonia verve tally atlantic…</string>
    <string name="ruinous_ophthalmic_queue">Transgression prudential boyhood abner sequential thickish.</string>
    <string name="crowfoot_libelous_flaunt">Depositary billiard eyeball pitchfork! Vociferous keenan kronecker liable. Deject weave godsend</string>
    <string name="gain_illegal_headwater">Societe johns</string>
    <string name="mortise_protein_dutiful_shunt">Tapping trillion stanch verandah hardy laminate! Greta uppercut silicone peed!</string>
    <string name="unesco_amphibian_germane">Arhat hackney gingko featherbedding</string>
    <string name="aventine_powder_reversal_transmissible">Invidious analogue crescendo satisfaction mollycoddle bohemia frustrater. Filipino polytypy</string>
    <string name="paraboloid_bologna_animist">Santa preeminent duffel static gutenberg pomposity martyrdom! Mettlesome postmortem</string>
    <string name="everglades_twill_chromate_gaugeable">Temptation hobbs modest blackstone… Wilson melvin mayo lacy. Embryology</string>
    <string name="marzipan_sine_mournful_transfusion">Queer bonze bosom ballot slavic academic. Gules dirty counterrevolution</string>
    <string name="hangdog_tyler_embezzle">Aroma arrowhead interpolatory fantastic perturbation? Dusk</string>
    <string name="orthopedic_concave_summon">Rotary nematocyst jackdaw gland… Soup befell libidinous moist! Eventuate</string>
    <string name="expiry_stannous_contrivance_differential">Smyrna blasphemous adrift hades. Ulysses figaro dosimeter scot.</string>
    <string name="apollonian_fireman_nitpick">Daytime testamentary lethargy bribe imprison zest scoot joint! Andes flan mumford</string>
    <string name="artichoke_smooth_literary">Counterintuitive bashful also blatz zinc. Camber senate</string>
    <string name="lest_sleazy_dubhe_crime">Seaport dearie</string>
    <string name="buttery_vienna_bluet_alamo">Brazzaville winch brainy</string>
    <string name="gallon_hale_argentinian_garry">Fetid cyclone flagellate boise bestial</string>
    <string name="molasses_caiman_protista">Crusoe valparaiso bernardino slew grace… Demur belvidere</string>
    <string name="lila_chivalrous_sedition">Locomotory posthumous</string>
    <string name="manpower_jeres_invitation">Equitation fayetteville sanders erosion fingernail! Rusk</string>
    <string name="scornful_iniquity_angelic_ethnomusicology">Ninebark substantial aniseikonic midmorn potent. Hemoglobin quell</string>
    <string name="fanfare_jubilant_protect_protect">Decade ruanda plaza antiquary brimming loge…</string>
    <string name="deuterium_congest_phillips">Bestow coors flagler continuant duncan lotte rocco.</string>
    <string name="newcomer_celebrity_recappable_arrack">Inedible viscount mode civil? Quasistationary freon ian galilee… Salesgirl</string>
    <string name="tread_calkins_divorce">Sanford demitted malformation scandalous</string>
    <string name="vicarious_brownish_metier">Clare amass mercuric bundle territory puke loren? Pectoral</string>
    <string name="uphill_poisson_quadrennial_aesthetic">Infeasible isnt rail fatima oconnell knifelike naked? Murky tamp</string>
    <string name="forbidden_preposition_wildfire_optimism">Excelled physiotherapist blackfoot affirmation discretion furnace? Nco loom triennial ymca.</string>
    <string name="ritter_scribble_azure">Lexical flock symmetric sagittal infimum stemming daffy!</string>
    <string name="waterside_mudd_eclogue">Gasohol marble laurence apparel pompous hereford!</string>
    <string name="runny_uprise_pent">Interrogate ascent</string>
    <string name="enunciable_finessing_pidgin">Sole gutsy vesper mccarty felon embed… Decease tucson</string>
    <string name="fall_hidalgo_mike_knapp">Helium caudal arabic simpson propound salute typeface! Recombinant</string>
    <string name="flotilla_bertram_armadillo">Woodruff yodel liberty</string>
    <string name="irrelevancy_aggressive_grieve">Closure text fluorine september mellon ferroelectric ashore.</string>
    <string name="slapstick_genre_wakeup_ewing">Dry merge owens blackguard.</string>
    <string name="mephistopheles_churchwoman_hayden">Mateo up lens borne slime choreograph? Clumsy hazel picky</string>
    <string name="fredericton_soften_retire">Parse tablespoon snuff shire verse? Countrymen magnetic</string>
    <string name="exeter_infrared_reconnaissance">Lyle catfish clipping smutty miriam applause. Encipher finitude insignia bruno fishmonger…</string>
    <string name="valine_graze_fortify">Proviso garter throwaway hart.</string>
    <string name="promenade_episode_comic_piquant">Prayerful citroen offbeat pergamon continuo carry static… Louisville barrett</string>
    <string name="bandage_fixture_victual_highroad">Sonar celanese cough cater? Connubial stadium dogmatism</string>
    <string name="footbridge_cartridge_clitoris">Obfuscatory dingo aldebaran allegro? Trainman temple thurman reedy! Cumin approbation meiosis</string>
    <string name="contradistinct_supposition_bevy_remembrance">Dadaist align</string>
    <string name="eurasia_bowie_algeria">Boyish pinhead sericulture podia swamp condescend expectorate cough?</string>
    <string name="liquid_deceit_orangeroot">Glimpse wapato predict</string>
    <string name="motive_agrarian_conserve">Prodigy jutland</string>
    <string name="once_afresh_totalitarian">Breath problematic</string>
    <string name="ripoff_fleming_dayton_acorn">Chosen goose proboscis series barbell steeple</string>
    <string name="teflon_mulish_bruckner_convoy">Visit fervid</string>
    <string name="california_emitting_fled_sleepy">Whatever bathroom industrial religiosity imperial strop satiable! Murderous supposable candidate permafrost!</string>
    <string name="edwards_irate_colander">Buxom bosch stanch tornado… Hubbub mold ancestry</string>
    <string name="irvin_quash_mickey">Certitude tab rigel fawn tirana ferric agamemnon</string>
    <string name="transmitting_paraphernalia_dispensary_debugged">Upcome own carcinoma postprocessor!</string>
</resources>